# libgphoto2_cmake_basic_example

./: README.md
example/: CMakeLists.txt  main.cpp
example/cmake_modules/: FindGphoto2.cmake
