cmake_minimum_required(VERSION 3.5.1) 


# PROJECT INFORMATION
set(PROJECT_NAME LibGphoto2_Example)
PROJECT (${PROJECT_NAME})


# LIBRARIES AND PACKAGES
list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules")
find_package(Gphoto2 REQUIRED)


# COMPILER FLAGS
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11 -std=gnu++11")

# SET OUTPUT FOLDERS
set(CMAKE_BINARY_DIR ${PROJECT_SOURCE_DIR}/bin)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

# SET PROJECT SOURCE FILES
set(SOURCE_FILES
	main.cpp
)

# INCLUDE DIRECTORIES
include_directories(${CMAKE_CURRENT_SOURCE_DIR})


# COMPILE PROGRAM
add_executable(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})
target_link_libraries(${PROJECT_NAME} ${Gphoto2_LIBRARIES})
